--- a/JavaScript Basics/index.html
+++ b/JavaScript Basics/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
-    <script src="Sum two numbers.js"></script>
+    <!-- <script src="Sum two numbers.js"></script> -->
+    <script src="Comparison operators, strict equality.js"></script>
   </body>
 </html>
