some codes solved

--- a/JavaScript Basics/index.html
+++ b/JavaScript Basics/index.html
@@ -9,6 +9,9 @@
 
   <body>
     <!-- <script src="Sum two numbers.js"></script> -->
-    <script src="Comparison operators, strict equality.js"></script>
+    <!-- <script src="Comparison operators, strict equality.js"></script> -->
+    <!-- <script src="Get type of value.js"></script> -->
+    <!-- <script src="Get nth character of string.js"></script> -->
+    <script src="Remove first n characters of string.js"></script>
   </body>
 </html>
