some basic challenge in js solved

--- a/JavaScript Basics/index.html
+++ b/JavaScript Basics/index.html
@@ -8,10 +8,24 @@
   </head>
 
   <body>
+    <h1>BASICS PROGRAMS</h1>
     <!-- <script src="Sum two numbers.js"></script> -->
     <!-- <script src="Comparison operators, strict equality.js"></script> -->
     <!-- <script src="Get type of value.js"></script> -->
     <!-- <script src="Get nth character of string.js"></script> -->
-    <script src="Remove first n characters of string.js"></script>
+    <!-- <script src="Remove first n characters of string.js"></script> -->
+    <!-- <script src="Get last n characters of string.js"></script> -->
+    <!-- <script src="Get first n characters of string.js"></script> -->
+    <!-- <script src="Extract first half of string.js"></script> -->
+    <!-- <script src="Remove last n characters of string.js"></script> -->
+    <!-- <script src="Return the percentage of a number.js"></script> -->
+    <!-- <script src="Basic JavaScript math operators.js"></script> -->
+    <!-- <script src="Check if a number is even.js"></script> -->
+    <!-- <script src="How many times does a character occur.js"></script> -->
+    <!-- <script src="Check if a number is a whole number.js"></script> -->
+    <!-- <script src="Multiplication, division, and comparison operators.js"></script> -->
+    <!-- <script src="Check whether a string contains another string and concentrate.js"></script> -->
+    <!-- <script src="Round a number to 2 decimal places.js"></script> -->
+    <script src="Split a number into its digits.js"></script>
   </body>
 </html>
