some basic challenge in js solved

--- a/JavaScript Basics/index.html
+++ b/JavaScript Basics/index.html
@@ -26,6 +26,8 @@
     <!-- <script src="Multiplication, division, and comparison operators.js"></script> -->
     <!-- <script src="Check whether a string contains another string and concentrate.js"></script> -->
     <!-- <script src="Round a number to 2 decimal places.js"></script> -->
-    <script src="Split a number into its digits.js"></script>
+    <!-- <script src="Split a number into its digits.js"></script> -->
+    <!-- <script src="Clear up the chaos behind these strings.js"></script> -->
+    <script src="Insert character after every n characters (backwards).js"></script>
   </body>
 </html>
