--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>JS Array Challenges</h1>
     <!-- <script src="Get nth element of array.js"></script> -->
-    <script src="Count number of elements in JavaScript array.js"></script>
+    <!-- <script src="Count number of elements in JavaScript array.js"></script> -->
+    <!-- <script src="Remove first n elements of an array.js"></script> -->
+    <script src="Get last n elements of an array.js"></script>
   </body>
 </html>
