5)get first n elements of an array 6)Return last n array elements

--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -11,6 +11,8 @@
     <!-- <script src="Get nth element of array.js"></script> -->
     <!-- <script src="Count number of elements in JavaScript array.js"></script> -->
     <!-- <script src="Remove first n elements of an array.js"></script> -->
-    <script src="Get last n elements of an array.js"></script>
+    <!-- <script src="Get last n elements of an array.js"></script> -->
+    <!-- <script src="Get first n elements of an array.js"></script> -->
+    <script src="Return last n array elements.js"></script>
   </body>
 </html>
