--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="Remove first n elements of an array.js"></script> -->
     <!-- <script src="Get last n elements of an array.js"></script> -->
     <!-- <script src="Get first n elements of an array.js"></script> -->
-    <script src="Return last n array elements.js"></script>
+    <!-- <script src="Return last n array elements.js"></script> -->
+    <!-- <script src="Remove a specific array element.js"></script> -->
+    <script src="Count number of negative values in array.js"></script>
   </body>
 </html>
