--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -15,6 +15,8 @@
     <!-- <script src="Get first n elements of an array.js"></script> -->
     <!-- <script src="Return last n array elements.js"></script> -->
     <!-- <script src="Remove a specific array element.js"></script> -->
-    <script src="Count number of negative values in array.js"></script>
+    <!-- <script src="Count number of negative values in array.js"></script> -->
+    <!-- <script src="Sort an array of strings alphabetically.js"></script> -->
+    <script src="Sort an array of numbers in descending order.js"></script>
   </body>
 </html>
