11)check if all array elements are equal

--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="Remove a specific array element.js"></script> -->
     <!-- <script src="Count number of negative values in array.js"></script> -->
     <!-- <script src="Sort an array of strings alphabetically.js"></script> -->
-    <script src="Sort an array of numbers in descending order.js"></script>
+    <!-- <script src="Sort an array of numbers in descending order.js"></script> -->
+    <script src="Check if all array elements are equal.js"></script>
   </body>
 </html>
