Calculate the sum of an array element and Return the average of an array of numbers

--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -18,6 +18,8 @@
     <!-- <script src="Count number of negative values in array.js"></script> -->
     <!-- <script src="Sort an array of strings alphabetically.js"></script> -->
     <!-- <script src="Sort an array of numbers in descending order.js"></script> -->
-    <script src="Check if all array elements are equal.js"></script>
+    <!-- <script src="Check if all array elements are equal.js"></script> -->
+    <!-- <script src="Calculate the sum of an array element.js"></script> -->
+    <script src="Return the average of an array of numbers.js"></script>
   </body>
 </html>
