Get Union of two sets,Creating JavaScript Sets and delete element from set challenge

--- a/JavaScript Sets/index.html
+++ b/JavaScript Sets/index.html
@@ -7,6 +7,9 @@
     <h1>JavaScript Sets</h1>
 
     <!-- <script src="Convert a Set to Array.js"></script> -->
-    <script src="Check if value is present in Set.js"></script>
+    <!-- <script src="Check if value is present in Set.js"></script> -->
+    <!-- <script src="Get union of two sets.js"></script> -->
+    <!-- <script src="Creating Javascript Sets.js"></script> -->
+    <script src="Delete element from set.js"></script>
   </body>
 </html>
