--- a/JavaScript Sets/index.html
+++ b/JavaScript Sets/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="Check if value is present in Set.js"></script> -->
     <!-- <script src="Get union of two sets.js"></script> -->
     <!-- <script src="Creating Javascript Sets.js"></script> -->
-    <script src="Delete element from set.js"></script>
+    <!-- <script src="Delete element from set.js"></script> -->
+    <script src="Get Intersection of two Javascript Sets.js"></script>
   </body>
 </html>
