get every nth element from array and sort an array by object proprty

--- a/JavaScript Arrays/index.html
+++ b/JavaScript Arrays/index.html
@@ -8,20 +8,6 @@
   </head>
   <body>
     <h1>JS Array Challenges</h1>
-    <!-- <script src="Get nth element of array.js"></script> -->
-    <!-- <script src="Count number of elements in JavaScript array.js"></script> -->
-    <!-- <script src="Remove first n elements of an array.js"></script> -->
-    <!-- <script src="Get last n elements of an array.js"></script> -->
-    <!-- <script src="Get first n elements of an array.js"></script> -->
-    <!-- <script src="Return last n array elements.js"></script> -->
-    <!-- <script src="Remove a specific array element.js"></script> -->
-    <!-- <script src="Count number of negative values in array.js"></script> -->
-    <!-- <script src="Sort an array of strings alphabetically.js"></script> -->
-    <!-- <script src="Sort an array of numbers in descending order.js"></script> -->
-    <!-- <script src="Check if all array elements are equal.js"></script> -->
-    <!-- <script src="Calculate the sum of an array element.js"></script> -->
-    <!-- <script src="Return the average of an array of numbers.js"></script> -->
-    <!-- <script src="Return the longest string from an array of strings.js"></script> -->
-    <script src="Merge an arbitrary number of arrays.js"></script>
+    <script src="Sort array by object property.js"></script>
   </body>
 </html>
